nobase_include_HEADERS =                                                                                 \
alos/fm_alos.h                                                              \
alos/fm_alos_alloc.h                                                        \
alos/fm_alos_dynamic_load.h                                                 \
alos/fm_alos_event_queue.h                                                  \
alos/fm_alos_init.h                                                         \
alos/fm_alos_lock.h                                                         \
alos/fm_alos_logging.h                                                      \
alos/fm_alos_rand.h                                                         \
alos/fm_alos_rwlock.h                                                       \
alos/fm_alos_sem.h                                                          \
alos/fm_alos_threads.h                                                      \
alos/fm_alos_time.h                                                         \
alos/linux/fm_alos_dyn_load_int.h                                           \
alos/linux/fm_alos_init_int.h                                               \
alos/linux/fm_alos_int.h                                                    \
alos/linux/fm_alos_logging_int.h                                            \
alos/linux/fm_alos_sys.h                                                    \
alos/linux/fm_alos_sys_int.h                                                \
alos/linux/fm_alos_threads_int.h                                            \
alos/linux/fm_alos_time_int.h                                               \
api/fm_api.h                                                                \
api/fm_api_acl.h                                                            \
api/fm_api_addr.h                                                           \
api/fm_api_attr.h                                                           \
api/fm_api_buffer.h                                                         \
api/fm_api_common.h                                                         \
api/fm_api_event_mac_maint.h                                                \
api/fm_api_event_mgmt.h                                                     \
api/fm_api_event_types.h                                                    \
api/fm_api_ffu.h                                                            \
api/fm_api_flow.h                                                           \
api/fm_api_init.h                                                           \
api/fm_api_lag.h                                                            \
api/fm_api_lbg.h                                                            \
api/fm_api_mapper.h                                                         \
api/fm_api_mirror.h                                                         \
api/fm_api_multicast.h                                                      \
api/fm_api_nat.h                                                            \
api/fm_api_netlink.h                                                        \
api/fm_api_nexthop.h                                                        \
api/fm_api_packet.h                                                         \
api/fm_api_parity.h                                                         \
api/fm_api_pkt.h                                                            \
api/fm_api_policer.h                                                        \
api/fm_api_port.h                                                           \
api/fm_api_portset.h                                                        \
api/fm_api_qos.h                                                            \
api/fm_api_regs.h                                                           \
api/fm_api_replication.h                                                    \
api/fm_api_routing.h                                                        \
api/fm_api_sched.h                                                          \
api/fm_api_sflow.h                                                          \
api/fm_api_stacking.h                                                       \
api/fm_api_stats.h                                                          \
api/fm_api_storm.h                                                          \
api/fm_api_stp.h                                                            \
api/fm_api_swag.h                                                           \
api/fm_api_trigger.h                                                        \
api/fm_api_tunnel.h                                                         \
api/fm_api_vlan.h                                                           \
api/fm_api_vn.h                                                             \
api/internal/fm10000/fm10000_api_acl_int.h                                  \
api/internal/fm10000/fm10000_api_addr_int.h                                 \
api/internal/fm10000/fm10000_api_an_int.h                                   \
api/internal/fm10000/fm10000_api_an_state_machines.h                        \
api/internal/fm10000/fm10000_api_attr_int.h                                 \
api/internal/fm10000/fm10000_api_crm_int.h                                  \
api/internal/fm10000/fm10000_api_crm_state_machines.h                    \
api/internal/fm10000/fm10000_api_debug_int.h                                \
api/internal/fm10000/fm10000_api_event_mac_maint_int.h                      \
api/internal/fm10000/fm10000_api_ffu_int.h                                  \
api/internal/fm10000/fm10000_api_flooding_int.h                             \
api/internal/fm10000/fm10000_api_flow_int.h                                 \
api/internal/fm10000/fm10000_api_hw_int.h                                   \
api/internal/fm10000/fm10000_api_lag_int.h                                  \
api/internal/fm10000/fm10000_api_lbg_int.h                                  \
api/internal/fm10000/fm10000_api_lport_int.h                                \
api/internal/fm10000/fm10000_api_mailbox_int.h                              \
api/internal/fm10000/fm10000_api_map_int.h                                  \
api/internal/fm10000/fm10000_api_mirror_int.h                               \
api/internal/fm10000/fm10000_api_mtable_int.h                               \
api/internal/fm10000/fm10000_api_multicast_int.h                            \
api/internal/fm10000/fm10000_api_nat_int.h                                  \
api/internal/fm10000/fm10000_api_nexthop_int.h                              \
api/internal/fm10000/fm10000_api_parity_int.h                               \
api/internal/fm10000/fm10000_api_pep_int.h                                  \
api/internal/fm10000/fm10000_api_pkt_int.h                                  \
api/internal/fm10000/fm10000_api_policer_int.h                              \
api/internal/fm10000/fm10000_api_port_int.h                                 \
api/internal/fm10000/fm10000_api_port_state_machines.h                      \
api/internal/fm10000/fm10000_api_qos_int.h                                  \
api/internal/fm10000/fm10000_api_regs_cache_int.h                           \
api/internal/fm10000/fm10000_api_regs_int.h                                 \
api/internal/fm10000/fm10000_api_replication_int.h                          \
api/internal/fm10000/fm10000_api_routing_int.h                              \
api/internal/fm10000/fm10000_api_sbus_int.h                                 \
api/internal/fm10000/fm10000_api_sched_int.h                                \
api/internal/fm10000/fm10000_api_serdes_core_int.h                          \
api/internal/fm10000/fm10000_api_serdes_dfe_state_machines.h                \
api/internal/fm10000/fm10000_api_serdes_int.h                               \
api/internal/fm10000/fm10000_api_serdes_state_machines.h                    \
api/internal/fm10000/fm10000_api_sflow_int.h                                \
api/internal/fm10000/fm10000_api_stacking_int.h                             \
api/internal/fm10000/fm10000_api_stats_int.h                                \
api/internal/fm10000/fm10000_api_storm_int.h                                \
api/internal/fm10000/fm10000_api_stp_int.h                                  \
api/internal/fm10000/fm10000_api_switch_int.h                               \
api/internal/fm10000/fm10000_api_te_int.h                                   \
api/internal/fm10000/fm10000_api_trigger_int.h                              \
api/internal/fm10000/fm10000_api_tunnel_int.h                               \
api/internal/fm10000/fm10000_api_vlan_int.h                                 \
api/internal/fm10000/fm10000_api_vn_int.h                                   \
api/internal/fm_api_acl_int.h                                               \
api/internal/fm_api_addr_int.h                                              \
api/internal/fm_api_cardinal_int.h                                          \
api/internal/fm_api_common_int.h                                            \
api/internal/fm_api_event_mac_maint_int.h                                   \
api/internal/fm_api_events_int.h                                            \
api/internal/fm_api_fibm_int.h                                              \
api/internal/fm_api_flow_int.h                                              \
api/internal/fm_api_init_int.h                                              \
api/internal/fm_api_int.h                                                   \
api/internal/fm_api_lag_int.h                                               \
api/internal/fm_api_lbg_int.h                                               \
api/internal/fm_api_legacy_int.h                                            \
api/internal/fm_api_lport_int.h                                             \
api/internal/fm_api_mailbox_int.h                                           \
api/internal/fm_api_mcast_groups_int.h                                      \
api/internal/fm_api_mirror_int.h                                            \
api/internal/fm_api_nat_int.h                                               \
api/internal/fm_api_nexthop_int.h                                           \
api/internal/fm_api_port_int.h                                              \
api/internal/fm_api_portmask.h                                              \
api/internal/fm_api_portset_int.h                                           \
api/internal/fm_api_qos_int.h                                               \
api/internal/fm_api_regs_cache_int.h                                        \
api/internal/fm_api_root_int.h                                              \
api/internal/fm_api_routing_int.h                                           \
api/internal/fm_api_stacking_int.h                                          \
api/internal/fm_api_stat_int.h                                              \
api/internal/fm_api_stp_int.h                                               \
api/internal/fm_api_swag_int.h                                              \
api/internal/fm_api_switch_int.h                                            \
api/internal/fm_api_trig_int.h                                              \
api/internal/fm_api_vlan_int.h                                              \
api/internal/fm_api_vn_int.h                                                \
api/internal/swag/fmSWAG_api_acl_int.h                                      \
api/internal/swag/fmSWAG_api_flow_int.h                                     \
api/internal/swag/fmSWAG_api_lbg_int.h                                      \
api/internal/swag/fmSWAG_api_mailbox_int.h                                  \
api/internal/swag/fmSWAG_api_mirror_int.h                                   \
api/internal/swag/fmSWAG_api_multicast_int.h                                \
api/internal/swag/fmSWAG_api_nat_int.h                                      \
api/internal/swag/fmSWAG_api_nexthop_int.h                                  \
api/internal/swag/fmSWAG_api_port_int.h                                     \
api/internal/swag/fmSWAG_api_portset_int.h                                  \
api/internal/swag/fmSWAG_api_qos_int.h                                      \
api/internal/swag/fmSWAG_api_replication_int.h                              \
api/internal/swag/fmSWAG_api_routing_int.h                                  \
api/internal/swag/fmSWAG_api_stats_int.h                                    \
api/internal/swag/fmSWAG_api_storm_int.h                                    \
api/internal/swag/fmSWAG_api_switch_int.h                                   \
api/internal/swag/fmSWAG_api_triggers_int.h                                 \
api/internal/swag/fmSWAG_api_tunnel_int.h                                   \
api/internal/swag/fmSWAG_api_vn_int.h                                       \
common/fm10000_property.h                                                   \
common/fm_array.h                                                           \
common/fm_bitarray.h                                                        \
common/fm_bitfield.h                                                        \
common/fm_c11_annex_k.h                                                     \
common/fm_common.h                                                          \
common/fm_crc32.h                                                           \
common/fm_dlist.h                                                           \
common/fm_errno.h                                                           \
common/fm_graycode.h                                                        \
common/fm_lock_prec.h                                                       \
common/fm_md5.h                                                             \
common/fm_property.h                                                        \
common/fm_state_machine.h                                                   \
common/fm_string.h                                                          \
common/fm_tree.h                                                            \
common/fm_version.h                                                         \
debug/fm10000/fm10000_debug_regs_int.h                                      \
debug/fm_debug.h                                                            \
debug/fm_debug_int.h                                                        \
fm_sdk.h                                                                    \
fm_sdk_fm10000_int.h                                                        \
fm_sdk_int.h                                                                \
fm_sdk_swag_int.h                                                           \
platforms/common/buffers/priority-buffer-queues/fm_priority_buffer_queues.h \
platforms/common/buffers/std-alloc/fm_buffer_std_alloc.h                    \
platforms/common/event/fm_platform_event.h                                  \
platforms/common/fm_file_attr_loader.h                                      \
platforms/common/instrument/platform_instrument.h                           \
platforms/common/lib/dll/fm_dynamicLib.h                                    \
platforms/common/lib/i2c/ipmi/fm_platform_ipmi.h                            \
platforms/common/lib/i2c/smbus/fm_platform_smbus.h                          \
platforms/common/lib/i2c/switch/fm_platform_fm10000_i2c.h                   \
platforms/common/lib/i2c/usb-cpld/fm_platform_com.h                         \
platforms/common/lib/i2c/usb-cpld/fm_platform_regs.h                        \
platforms/common/lib/net/fm_netsock.h                                       \
platforms/common/packet/generic-lci/fm_generic_lci.h                        \
platforms/common/packet/generic-netlink/fm_generic_netlink.h                \
platforms/common/packet/generic-nic/fm_generic_nic.h                        \
platforms/common/packet/generic-packet/fm10000/fm10000_generic_rx.h         \
platforms/common/packet/generic-packet/fm10000/fm10000_generic_tx.h         \
platforms/common/packet/generic-packet/fm_generic_packet.h                  \
platforms/common/packet/generic-pti/fm10000/fm10000_generic_pti.h           \
platforms/common/packet/generic-rawsocket/fm_generic_rawsocket.h            \
platforms/common/phy/fm_platform_xcvr.h                                     \
platforms/common/stubs/platform_api_stubs.h                                 \
platforms/common/switch/fm10000/fm10000_utils.h                             \
platforms/common/switch/fm10000/fm10000_voltage_scaling.h                   \
platforms/common/switch/fm_regs_access_ebi.h                                \
platforms/common/switch/fm_regs_access_i2c.h                                \
platforms/common/switch/fm_regs_access_memmap.h                             \
platforms/libertyTrail/fm_host_drv.h                                        \
platforms/libertyTrail/platform_app_api.h                                   \
platforms/libertyTrail/platform_attr.h                                      \
platforms/libertyTrail/platform_buffer_defs.h                               \
platforms/libertyTrail/platform_config.h                                    \
platforms/libertyTrail/platform_config_nvm.h                                \
platforms/libertyTrail/platform_config_tlv.h                                \
platforms/libertyTrail/platform_debug.h                                     \
platforms/libertyTrail/platform_defines.h                                   \
platforms/libertyTrail/platform_gpio.h                                      \
platforms/libertyTrail/platform_led.h                                       \
platforms/libertyTrail/platform_lib.h                                       \
platforms/libertyTrail/platform_lib_api.h                                   \
platforms/libertyTrail/platform_mgmt.h                                      \
platforms/libertyTrail/platform_phy.h                                       \
platforms/libertyTrail/platform_port.h                                      \
platforms/libertyTrail/platform_types.h                                     \
platforms/platform.h                                                        \
platforms/platform_api.h                                                    \
platforms/platform_app.h                                                    \
platforms/platform_defaults.h                                               \
platforms/util/fm10000/fm10000_util_spi.h                                   \
platforms/util/fm10000/fm10000_util_bsm.h                                   \
platforms/util/fm_util.h                                                    \
platforms/util/fm_util_device_lock.h                                        \
platforms/util/fm_util_pca.h                                                \
platforms/util/fm_util_spi_flash_pch.h                                      \
platforms/util/retimer/fm_util_gn2412.h                                     \
platforms/util/fm_util_config_tlv.h                                         \
std/intel/fm_std.h
